@@ -3,6 +3,8 @@ v0.9.1
 ! year was screwed up when movie title contained "()"
 ! method rating() did not return any value on subsequent calls (only on the first)
 + added support for retrieving trailer urls (method trailers())
++ added retrieval of 'Crazy Credits' (try with 'The Blues Brothers', they have some)
++ added goof retrieval (again, you can see some with 'The Blues Brothers')
 
 v0.9.0 (06.01.2008)
 -------------------
